--- a/3. Estatística com R - testes de hipóteses/2. Aula.ipynb
+++ b/3. Estatística com R - testes de hipóteses/2. Aula.ipynb
@@ -919,6 +919,7 @@
    "metadata": {
     "colab_type": "text",
     "id": "rUKgxZ7_psjp",
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1003,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1020,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1030,12 +1031,76 @@
     "id": "AJNH5RQtpsju",
     "outputId": "2e4e74bb-9e93-41ce-b12c-af947c39fda8"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>Amostra</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>509</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>505</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>495</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>510</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>496</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>509</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 1\n",
+       "\\begin{tabular}{r|l}\n",
+       "  & Amostra\\\\\n",
+       "  & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t1 & 509\\\\\n",
+       "\t2 & 505\\\\\n",
+       "\t3 & 495\\\\\n",
+       "\t4 & 510\\\\\n",
+       "\t5 & 496\\\\\n",
+       "\t6 & 509\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 1\n",
+       "\n",
+       "| <!--/--> | Amostra &lt;dbl&gt; |\n",
+       "|---|---|\n",
+       "| 1 | 509 |\n",
+       "| 2 | 505 |\n",
+       "| 3 | 495 |\n",
+       "| 4 | 510 |\n",
+       "| 5 | 496 |\n",
+       "| 6 | 509 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Amostra\n",
+       "1 509    \n",
+       "2 505    \n",
+       "3 495    \n",
+       "4 510    \n",
+       "5 496    \n",
+       "6 509    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "amostra <- data.frame(Amostra = amostra)\n",
+    "head(amostra)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1045,15 +1110,34 @@
     "id": "tnjD0A_ppsjw",
     "outputId": "96415938-0ad1-463b-ee79-719ef48dca1a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "503.24"
+      ],
+      "text/latex": [
+       "503.24"
+      ],
+      "text/markdown": [
+       "503.24"
+      ],
+      "text/plain": [
+       "[1] 503.24"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "media_amostra <- \n",
+    "media_amostra <- mean(amostra$Amostra)\n",
     "media_amostra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1063,15 +1147,34 @@
     "id": "JXz2IFCUpsjy",
     "outputId": "fb457ed0-cc94-498c-b13d-310418913f61"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "4.48380305052735"
+      ],
+      "text/latex": [
+       "4.48380305052735"
+      ],
+      "text/markdown": [
+       "4.48380305052735"
+      ],
+      "text/plain": [
+       "[1] 4.483803"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "desvio_padrao_amostra <- \n",
+    "desvio_padrao_amostra <- sd(amostra$Amostra)\n",
     "desvio_padrao_amostra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1079,10 +1182,10 @@
    },
    "outputs": [],
    "source": [
-    "media <- \n",
-    "significancia <- \n",
-    "confianca <- \n",
-    "n <- "
+    "media <- 500\n",
+    "significancia <- 0.05\n",
+    "confianca <- 1 - significancia\n",
+    "n <- 50"
    ]
   },
   {
@@ -1178,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1188,9 +1291,28 @@
     "id": "2JyYCHeQpsj8",
     "outputId": "593263ce-a450-43d3-bcf1-1d663ef2774f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.975"
+      ],
+      "text/latex": [
+       "0.975"
+      ],
+      "text/markdown": [
+       "0.975"
+      ],
+      "text/plain": [
+       "[1] 0.975"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "probabilidade <- \n",
+    "probabilidade <- 0.5 + (confianca / 2)\n",
     "probabilidade"
    ]
   },
@@ -1206,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1216,9 +1338,28 @@
     "id": "imc3GyDLpsj_",
     "outputId": "b9dca9d5-da76-42b1-919c-1aaf593fed70"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1.95996398454005"
+      ],
+      "text/latex": [
+       "1.95996398454005"
+      ],
+      "text/markdown": [
+       "1.95996398454005"
+      ],
+      "text/plain": [
+       "[1] 1.959964"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "z_alpha_2 <- \n",
+    "z_alpha_2 <- qnorm(probabilidade)\n",
     "z_alpha_2"
    ]
   },
@@ -1256,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1266,9 +1407,28 @@
     "id": "a6zMj0YzpskC",
     "outputId": "83a2bb40-f67f-4ddc-dbd9-a88032f7dc86"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "5.10955977599187"
+      ],
+      "text/latex": [
+       "5.10955977599187"
+      ],
+      "text/markdown": [
+       "5.10955977599187"
+      ],
+      "text/plain": [
+       "[1] 5.10956"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "z <- \n",
+    "z <- (media_amostra - media) / ((desvio_padrao_amostra) / (sqrt(n)))\n",
     "z"
    ]
   },
@@ -1327,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1337,14 +1497,33 @@
     "id": "-MkJyqSupskG",
     "outputId": "6495abcc-0c3f-4759-8a31-96d668ad2eff"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "FALSE"
+      ],
+      "text/latex": [
+       "FALSE"
+      ],
+      "text/markdown": [
+       "FALSE"
+      ],
+      "text/plain": [
+       "[1] FALSE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "z <= -z_alpha_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1354,16 +1533,54 @@
     "id": "FVTIIXA3pskI",
     "outputId": "8ec15147-9c1d-4fa0-fe26-8de8166f3ed6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "z >= z_alpha_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'Rejeitar H0'"
+      ],
+      "text/latex": [
+       "'Rejeitar H0'"
+      ],
+      "text/markdown": [
+       "'Rejeitar H0'"
+      ],
+      "text/plain": [
+       "[1] \"Rejeitar H0\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if(z <= -z_alpha_2 || z >= z_alpha_2){\n",
     "    'Rejeitar H0'\n",
@@ -1397,17 +1614,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "3.22910317152036e-07"
+      ],
+      "text/latex": [
+       "3.22910317152036e-07"
+      ],
+      "text/markdown": [
+       "3.22910317152036e-07"
+      ],
+      "text/plain": [
+       "[1] 3.229103e-07"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "p_valor <- \n",
+    "p_valor <- 2 * (1 - pnorm(z))\n",
     "p_valor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1418,7 +1654,26 @@
     "outputId": "b53d6bed-fcb0-41ae-ecf4-38e2dd1dcaec",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "p_valor <= significancia"
    ]
@@ -1452,25 +1707,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'DescTools' was built under R version 4.1.3\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "library(DescTools)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tOne Sample z-test\n",
+       "\n",
+       "data:  amostra$Amostra\n",
+       "z = 5.1096, Std. Dev. Population = 4.4838, p-value = 3.229e-07\n",
+       "alternative hypothesis: true mean is not equal to 500\n",
+       "95 percent confidence interval:\n",
+       " 501.9972 504.4828\n",
+       "sample estimates:\n",
+       "mean of x \n",
+       "   503.24 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ZTest(amostra$Amostra, mu = media, sd_pop = desvio_padrao_amostra)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "resultado <- "
+    "resultado <- ZTest(amostra$Amostra, mu = media, sd_pop = desvio_padrao_amostra)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<strong>z:</strong> 5.10955977599187"
+      ],
+      "text/latex": [
+       "\\textbf{z:} 5.10955977599187"
+      ],
+      "text/markdown": [
+       "**z:** 5.10955977599187"
+      ],
+      "text/plain": [
+       "      z \n",
+       "5.10956 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "resultado$statistic"
    ]
   },
   {
@@ -1482,26 +1799,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "3.22910317244578e-07"
+      ],
+      "text/latex": [
+       "3.22910317244578e-07"
+      ],
+      "text/markdown": [
+       "3.22910317244578e-07"
+      ],
+      "text/plain": [
+       "[1] 3.229103e-07"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "p_valor <- \n",
+    "p_valor <- resultado$p.value\n",
     "p_valor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "p_valor <= significancia"
    ]
@@ -1531,7 +1879,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "CPHPL4nWpskw"
+    "id": "CPHPL4nWpskw",
+    "tags": []
    },
    "source": [
     "## <font color='red'>Problema</font>"
