--- a/3. Estatística com R - testes de hipóteses/2. Aula.ipynb
+++ b/3. Estatística com R - testes de hipóteses/2. Aula.ipynb
@@ -1869,7 +1869,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "U8OWXeVtpskv"
+    "id": "U8OWXeVtpskv",
+    "tags": []
    },
    "source": [
     "## <font color=green>3.2 Teste Unicaudal</font>\n",
@@ -1881,6 +1882,7 @@
    "metadata": {
     "colab_type": "text",
     "id": "CPHPL4nWpskw",
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3017,7 +3019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3037,7 +3039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3047,15 +3049,34 @@
     "id": "BGyXCbompslh",
     "outputId": "a5e8a9b9-ee69-408f-b8c0-6cac89b36d9a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1357.528"
+      ],
+      "text/latex": [
+       "1357.528"
+      ],
+      "text/markdown": [
+       "1357.528"
+      ],
+      "text/plain": [
+       "[1] 1357.528"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "media_amostra_M <- \n",
+    "media_amostra_M <- mean(mulheres)\n",
     "media_amostra_M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3065,15 +3086,34 @@
     "id": "RoxFOCA3pslk",
     "outputId": "85133b37-a4a6-49cd-a585-700725811b09"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1569.90119074846"
+      ],
+      "text/latex": [
+       "1569.90119074846"
+      ],
+      "text/markdown": [
+       "1569.90119074846"
+      ],
+      "text/plain": [
+       "[1] 1569.901"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "desvio_padrao_amostra_M <- \n",
+    "desvio_padrao_amostra_M <- sd(mulheres)\n",
     "desvio_padrao_amostra_M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3083,15 +3123,34 @@
     "id": "Of8L6Hygpsll",
     "outputId": "fe0dc0f3-79e3-4375-de47-43a4ff6c3f79"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2142.608"
+      ],
+      "text/latex": [
+       "2142.608"
+      ],
+      "text/markdown": [
+       "2142.608"
+      ],
+      "text/plain": [
+       "[1] 2142.608"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "media_amostra_H <- \n",
+    "media_amostra_H <- mean(homens)\n",
     "media_amostra_H"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3101,15 +3160,34 @@
     "id": "-cSpXXTepsln",
     "outputId": "8a3d0017-ac70-4fe3-aae1-0c7bf32e676e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2548.05080249987"
+      ],
+      "text/latex": [
+       "2548.05080249987"
+      ],
+      "text/markdown": [
+       "2548.05080249987"
+      ],
+      "text/plain": [
+       "[1] 2548.051"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "desvio_padrao_amostra_H <- \n",
+    "desvio_padrao_amostra_H <- sd(homens)\n",
     "desvio_padrao_amostra_H"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -3117,11 +3195,11 @@
    },
    "outputs": [],
    "source": [
-    "significancia <- \n",
-    "confianca <- \n",
-    "n_M <- \n",
-    "n_H <- \n",
-    "D_0 <- "
+    "significancia <- 0.01\n",
+    "confianca <- 1 - significancia\n",
+    "n_M <- 500\n",
+    "n_H <- 500\n",
+    "D_0 <- 0"
    ]
   },
   {
@@ -3233,7 +3311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3243,15 +3321,34 @@
     "id": "b3Y_CZmzpsls",
     "outputId": "bc2e1945-7bb1-4c2c-851a-f0102328ce0e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.99"
+      ],
+      "text/latex": [
+       "0.99"
+      ],
+      "text/markdown": [
+       "0.99"
+      ],
+      "text/plain": [
+       "[1] 0.99"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "probabilidade <- \n",
+    "probabilidade <- confianca\n",
     "probabilidade"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3261,9 +3358,28 @@
     "id": "qNse2bFRpslu",
     "outputId": "b03d1db9-17ec-4577-825d-dc81f7aee07b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2.32634787404084"
+      ],
+      "text/latex": [
+       "2.32634787404084"
+      ],
+      "text/markdown": [
+       "2.32634787404084"
+      ],
+      "text/plain": [
+       "[1] 2.326348"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "z_alpha <- \n",
+    "z_alpha <- qnorm(probabilidade)\n",
     "z_alpha"
    ]
   },
@@ -3301,7 +3417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3311,13 +3427,32 @@
     "id": "AL2i9JOTpslw",
     "outputId": "920efcb1-4b72-4366-9930-52d6e0119549"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "5.86562005776475"
+      ],
+      "text/latex": [
+       "5.86562005776475"
+      ],
+      "text/markdown": [
+       "5.86562005776475"
+      ],
+      "text/plain": [
+       "[1] 5.86562"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "numerador <- \n",
+    "numerador <- media_amostra_H - media_amostra_M - D_0\n",
     "\n",
-    "denominador <- \n",
+    "denominador <- sqrt(((desvio_padrao_amostra_H ** 2)/n_H) + ((desvio_padrao_amostra_M ** 2)/n_M))\n",
     "\n",
-    "z <- \n",
+    "z <- numerador / denominador\n",
     "\n",
     "z"
    ]
@@ -3377,7 +3512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3387,7 +3522,26 @@
     "id": "tkJSji7gpsly",
     "outputId": "8bbaa7f8-311f-4b6e-98f0-6964f510a91d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "z >= z_alpha"
    ]
@@ -3417,14 +3571,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "5.86562005776475"
+      ],
+      "text/latex": [
+       "5.86562005776475"
+      ],
+      "text/markdown": [
+       "5.86562005776475"
+      ],
+      "text/plain": [
+       "[1] 5.86562"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "z"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3434,15 +3609,34 @@
     "id": "tSbOZem9hLvs",
     "outputId": "c987a7bf-f772-4a01-a4c6-9a3afacf08d3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2.23728678594584e-09"
+      ],
+      "text/latex": [
+       "2.23728678594584e-09"
+      ],
+      "text/markdown": [
+       "2.23728678594584e-09"
+      ],
+      "text/plain": [
+       "[1] 2.237287e-09"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "p_valor <- \n",
+    "p_valor <- pnorm(z, lower.tail = F)\n",
     "p_valor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3452,7 +3646,26 @@
     "id": "E3NF1BzYpsl6",
     "outputId": "73af41e4-51a9-4e1f-d4c8-0786046c24b2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "p_valor <= significancia"
    ]
@@ -3472,11 +3685,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'E:/Documentos/R/win-library/4.1'\n",
+      "(as 'lib' is unspecified)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'BSDA' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\jacpereira\\AppData\\Local\\Temp\\Rtmp88Hnr3\\downloaded_packages\n"
+     ]
+    }
+   ],
    "source": [
-    "# install.packages(\"BSDA\")\n",
+    "install.packages(\"BSDA\")\n",
     "\n",
     "# OU\n",
     "\n",
@@ -3493,36 +3726,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'BSDA' was built under R version 4.1.3\"\n",
+      "Carregando pacotes exigidos: lattice\n",
+      "\n",
+      "\n",
+      "Attaching package: 'BSDA'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:datasets':\n",
+      "\n",
+      "    Orange\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "library(BSDA)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tTwo-sample z-Test\n",
+       "\n",
+       "data:  homens and mulheres\n",
+       "z = 5.8656, p-value = 2.237e-09\n",
+       "alternative hypothesis: true difference in means is greater than 0\n",
+       "99 percent confidence interval:\n",
+       " 473.7115       NA\n",
+       "sample estimates:\n",
+       "mean of x mean of y \n",
+       " 2142.608  1357.528 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "resultado <- \n",
+    "resultado <- z.test(x = homens,\n",
+    "                    y = mulheres,\n",
+    "                    alternative = 'greater',\n",
+    "                    mu = 0,\n",
+    "                    sigma.x = sd(homens),\n",
+    "                    sigma.y = sd(mulheres),\n",
+    "                    conf.level = .99\n",
+    "                   )\n",
     "resultado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2.23728680026625e-09"
+      ],
+      "text/latex": [
+       "2.23728680026625e-09"
+      ],
+      "text/markdown": [
+       "2.23728680026625e-09"
+      ],
+      "text/plain": [
+       "[1] 2.237287e-09"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "p_valor <- \n",
+    "p_valor <- resultado$p.value\n",
     "p_valor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "p_valor <= significancia"
    ]
@@ -3537,29 +3857,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tTwo Sample t-test\n",
+       "\n",
+       "data:  homens and mulheres\n",
+       "t = 5.8656, df = 998, p-value = 3.04e-09\n",
+       "alternative hypothesis: true difference in means is greater than 0\n",
+       "95 percent confidence interval:\n",
+       " 564.7211      Inf\n",
+       "sample estimates:\n",
+       "mean of x mean of y \n",
+       " 2142.608  1357.528 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "resultado <- \n",
+    "resultado <- t.test(x = homens,\n",
+    "                    y = mulheres,\n",
+    "                    alternative = 'greater',\n",
+    "                    paired = F,\n",
+    "                    var.equal = T)\n",
     "resultado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "3.04010400943369e-09"
+      ],
+      "text/latex": [
+       "3.04010400943369e-09"
+      ],
+      "text/markdown": [
+       "3.04010400943369e-09"
+      ],
+      "text/plain": [
+       "[1] 3.040104e-09"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "p_valor <- \n",
+    "p_valor <- resultado$p.value\n",
     "p_valor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "p_valor <= significancia"
    ]
